# Agentic-AI

./: .gitignore  func.ipynb  prac.ipynb  pydantic_test.ipynb  test.ipynb  test2.ipynb
1_foundations/: 1.ipynb  1_Exercise.ipynb  2.ipynb  2_Evaluate_different_models.ipynb  3_Resources_LLM.ipynb  4_Tools_pushover.ipynb  README.md
2_openai/: 1_create_agent.ipynb  2_sendgrid_email.ipynb  3_diff_llms_guardrails.ipynb  4_Deep_Research.ipynb
3_crew/: Steps_for_crew.txt
3_crew/development_team/: README.md  pyproject.toml
3_crew/development_team/output/: accounts.py  accounts.py_design.md  app.py  test_accounts.py
3_crew/development_team/src/development_team/: crew.py  main.py
3_crew/development_team/src/development_team/config/: agents.yaml
3_crew/misra/: README.md  pyproject.toml
3_crew/misra/src/misra/: crew.py  main.py  misra_raw.txt  misra_retriever.py  misra_rules.json  misra_texts.json  pdf_chunker.py  pdf_chunks_store_faiss.py  pdf_data_extractor.py
3_crew/misra/src/misra/config/: agents.yaml  tasks.yaml
4_langraph/: 1_lab.ipynb  2_suoerstep.ipynb  3_lab_3.ipynb  4_lab.py  4_lab_4.ipynb  memory.db-shm  memory.db-wal  sidekick.py  sidekick_tools.py  terminologies.ipynb
5_Autogen/: lab_1.ipynb  lab_2_Multi_model.ipynb  lab_2_mcp_script.py  lab_3_autogen_core.ipynb  lab_4_distributed.ipynb  prac_1.ipynb  prac_2.ipynb  tickets.db  tickets1.db
6_MCP/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  instruction_wsl.txt
Guardrails/: detoxify.ipynb  email_check.xml  name_age_check.ipynb  person_output.xml  pydantic_verifi.ipynb
Practice/: guardrails.ipynb  (+1 more)
(+31 files in other folders)
