[project]
name = "misra"
version = "0.1.0"
description = "misra using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.134.0,<1.0.0"
]

[project.scripts]
misra = "misra.main:run"
run_crew = "misra.main:run"
train = "misra.main:train"
replay = "misra.main:replay"
test = "misra.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
